[package]
name = "bitnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gauss"  # The name of the binary
path = "src/gauss.rs"  # Path to the source file

[dependencies]
anyhow = "1.0.86"
candle-core = "0.5.1"
candle-nn = "0.5.1"
clap = { version = "4.5.5", features = ["derive"]}
# clap = { version = "4.5.6", features = ["derive"] }
# clap = { version = "4.2.4", features = ["derive"] }
# clap = { version = "4.5.4", features=["derive"] }
itertools = "0.13.0"
rand = "0.8.5"
