[package]
name = "bitnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gauss"  # The name of the binary
path = "src/gauss.rs"  # Path to the source file

[[bin]]
name = "gauss_full"  # The name of the binary
path = "src/gauss_full.rs"  # Path to the source file

[dependencies]
accelerate-src = "0.3.2"
anyhow = "1.0.86"
candle-core = {version="0.5.1", features=["accelerate", "metal"]}
candle-nn = {version="0.5.1", features=["accelerate", "metal"]}
clap = { version = "4.5.5", features = ["derive"]}
duckdb = "0.10.2"
image = "0.25.1"
# clap = { version = "4.5.6", features = ["derive"] }
# clap = { version = "4.2.4", features = ["derive"] }
# clap = { version = "4.5.4", features=["derive"] }
itertools = "0.13.0"
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
rand = "0.8.5"
